# verbeth

./: .cluadeignore  .gitignore  LICENSE  README.md  old-plan-docs.md  package.json  plan(done).md  plan-pq-metadata-v2.md  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  previous-plan.md  verbeth-client-plan.md  verbeth-gas-costs.xlsx  verbeth-messaging-comparison.xlsx  vitest.integration.config.mjs
.github/workflows/: ci.yml
.vercel/: project.json
apps/demo/: .env.example  config.ts  index.html  package.json  vite.config.ts
apps/demo/src/: App.tsx  chain.ts  main.tsx  providers.tsx  rpc.tsx  types.ts
apps/demo/src/components/: AddressAvatar.tsx  CatchUpBanner.tsx  CelebrationToast.tsx  ChatLayout.tsx  HistoryScanner.tsx  IdentityCreation.tsx  InitialForm.tsx  PinnedResetRequest.tsx  WalletButton.tsx  (+3 more)
apps/docs/: docusaurus.config.ts  double-ratchet.md  indicazioni-claude.md  metadata-privacy.md  replay-protection.md  sidebars.ts  topic-ratcheting.md
apps/docs/docs/: overview.md  quick-start.md
apps/indexer/: .env.example  Cargo.toml  Dockerfile  README.md  fly.toml
apps/indexer/src/: config.rs  error.rs  main.rs
apps/verbeth-indexer/: .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
apps/verbeth-indexer/src/: config.rs  error.rs
apps/verbeth-indexer/src/api/: health.rs  mod.rs
apps/verbeth-indexer/src/db/: queries.rs  schema.rs
apps/verbeth-indexer/src/indexer/: backfill.rs  events.rs  processor.rs
erc/: ERC-pre-draft.md  ethereum-magicians-thread-draft.md
tests/: e2e.test.ts  handshaking.test.ts  messaging.test.ts  setup.ts  utils.ts
(+56 files in other folders)
