[package]
name = "verbeth-indexer"
version = "0.1.0"
edition = "2021"
rust-version = "1.84"
default-run = "verbeth-indexer"

[dependencies]
tokio = { version = "1.43", features = ["full", "signal"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

alloy = { version = "0.7", features = [
    "provider-ws",
    "provider-http",
    "rpc-types-eth",
    "sol-types",
]}

rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
hex = "0.4"
governor = "0.8"
nonzero_ext = "0.3"
futures-lite = "2.5"

[profile.release]
lto = true
codegen-units = 1
